<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/black"
        android:textSize="@dimen/h1"
        android:text="@string/label_welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewUserName"
        android:textStyle="bold"
        android:text="@string/label_user_name"
        android:textColor="@color/black"
        android:textSize="@dimen/h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonOrderHistory"
        android:paddingLeft="@dimen/_12sdp"
        android:drawableLeft="@drawable/order_history"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/h1"
        android:text="@string/label_order_history"
        android:background="@drawable/background_black_thick"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>