<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/label_deliver_to"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/h0" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_chosen_city"
            android:textColor="@color/black"
            android:textSize="@dimen/h0"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewChangeCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_change"
            android:textColor="@color/black"
            android:textSize="@dimen/h0"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>