<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewNoInternet"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/red" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewKFCMan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/cart_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/noInternetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/no_internet"
        android:textColor="@color/black"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewKFCMan" />

    <TextView
        android:id="@+id/textViewNoInternetDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:text="@string/no_internet_description"
        android:textColor="@color/black"
        android:textSize="@dimen/h0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noInternetTitle" />

    <TextView
        android:id="@+id/textViewSettingInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_parent"
        android:layout_marginEnd="@dimen/margin_right_parent"
        android:layout_marginBottom="@dimen/_24sdp"
        android:background="@drawable/cart_ripple"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="@dimen/h0"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonTryAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_parent"
        android:layout_marginEnd="@dimen/margin_right_parent"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/background_red_thick"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="@dimen/h1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>