<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/h0"
        android:text="@string/label_sign_in_or_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="11"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_weight="5"
            android:paddingRight="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:paddingTop="@dimen/_4sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/h0"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/label_sign_up"
            android:background="@drawable/background_red_thick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_weight="5"
            android:paddingRight="@dimen/_8sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:paddingTop="@dimen/_4sdp"
            android:id="@+id/buttonSignIn"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/h0"
            android:textColor="@color/white"
            android:text="@string/label_sign_in"
            android:background="@drawable/background_red_thick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>